@@ -1,3 +1,10 @@
+2012-03-24  Romain Francois  <romain@r-enthusiasts.com>
+
+	* src/cache.cpp: Using a single Rcpp_cache, stored in the Rcpp namespace
+	
+	* src/Evaluator.cpp: Using tryCatch instead of rcpp_tryCatch, no more using .Internal
+	
+
 2012-03-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Added short subsection on how to
